--- a/styles/index.css
+++ b/styles/index.css
@@ -13,7 +13,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow: hidden;
-  /* background-color: rgb(22, 22, 22); */
 }
 
 body, button {
@@ -27,7 +26,6 @@ code {
 
 button {
   padding: 0.7em;
-  text-shadow: white 1px 0 5px;
   transition: 200ms;
 }
 
@@ -99,6 +97,14 @@ button:active {
   'opsz' 48
 }
 
+nav .material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 700,
+  'GRAD' 0,
+  'opsz' 48
+}
+
 .hidden-visibility {
   visibility: hidden;
 }
@@ -117,8 +123,11 @@ button:active {
   border-radius: 5px;
 }
 
-.window {
+.window, .window button, .window-header {
   background-color: var(--accent-color);
+}
+
+.window {
   border: var(--default-color) 3px solid;
   position: absolute;
 }
@@ -134,17 +143,16 @@ button:active {
 }
 
 .window button {
-  background-color: var(--accent-color);
   border: var(--default-color) 2px solid;
+  padding: 3px 20px;
+  color: var(--default-white);
+}
+
+.window button:disabled {
   padding: 0;
 }
 
-#loading-overlay > .window button.play-btn {
-  padding: 3px 20px;
-}
-
 .window-header {
-  background-color: var(--accent-color);
   padding: 1px 0;
   text-align: left;
   position: relative;
@@ -166,18 +174,6 @@ button:active {
   margin: 5px 10px;
   color: var(--default-white);
 }
-/* 
-#miku-profile {
-  width: 20vw;
-  bottom: 50px;
-  right: 10px;
-  height: min-content;
-}
-
-#miku-profile img {
-  width: 100%;
-  object-fit: cover;
-} */
 
 #graphic-grid {
   grid-template-columns: repeat(15, 1fr);
@@ -201,14 +197,16 @@ button:active {
 }
 
 #graphic-grid > nav span {
-  font-size: 2.1em;
+  font-size: 2.5em;
   color: var(--accent-color);
+  -webkit-text-stroke: var(--default-white) 0.8px;
+  text-shadow: 0px 0px 5px var(--default-white);
 }
 
 #graphic-grid > nav input {
   transform: rotate(-90deg);
   transform-origin: left;
-  width: 130px;
+  width: min(20vh, 130px);
   position: absolute;
   left: 40%;
   bottom: 0;
@@ -220,6 +218,7 @@ button:active {
   height: 150px;
   position: relative;
   margin: 0 0.2em;
+  overflow-y: hidden;
 }
 
 #miku-scene {
