--- a/styles/index.css
+++ b/styles/index.css
@@ -19,11 +19,6 @@ body, button {
   font-family: 'DotGothic16', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
 button {
   padding: 0.7em;
   transition: 200ms;
@@ -35,33 +30,11 @@ button:hover {
 
 button:active {
   scale: 0.9;
-  filter: contrast(0.7);
+  filter: contrast(0.6);
 }
 
-.grid {
-  display: grid;
-  grid-template-rows: auto;
-  transition: 200ms;
-}
-
-.non-chorus {
-  grid-template-columns: 5.5% auto 16.5%;
-}
-
-.chorus {
-  grid-template-columns: 11% auto 11%;
-}
-
-.col1 {
-  grid-column-start: 1;
-}
-
-.col2 {
-  grid-column-start: 2;
-}
-
-.col3 {
-  grid-column-start: 3;
+.last-col {
+  grid-column-start: 21;
 }
 
 .hidden {
@@ -70,6 +43,7 @@ button:active {
 
 .vertical-bar {
   height: 100%;
+  grid-row: 1 / span 16;
   background-color: var(--default-color);
 }
 
@@ -116,7 +90,6 @@ nav .material-symbols-outlined {
 .graphic-box {
   border: var(--accent-color) 3px solid;
   box-shadow: var(--accent-color) 1px 1px 5px;
-  border-radius: 10px;
 }
 
 .window, .window-body, .window button {
@@ -175,15 +148,17 @@ nav .material-symbols-outlined {
   color: var(--default-white);
 }
 
-#graphic-grid {
-  grid-template-columns: repeat(15, 1fr);
-  grid-template-rows: repeat(10, 1fr);
-  gap: 1em;
+.grid {
+  display: grid;
+  grid-template-columns: repeat(21, 1fr);
+  grid-template-rows: repeat(16, 1fr);
+  gap: 0.6em;
+  transition: 200ms;
 }
 
 #graphic-grid > nav {
-  grid-column: 3 / span 1;
-  grid-row: 3 / span 6;
+  grid-column: 4 / span 1;
+  grid-row: 5 / span 6;
   display: flex;
   flex-direction: column;
   align-items: end;
@@ -222,51 +197,62 @@ nav .material-symbols-outlined {
 }
 
 #miku-scene {
-  grid-column: 8 / span 5;
-  grid-row: 3 / span 6;
+  grid-column: 8 / span 7;
+  grid-row: 5 / span 8;
   position: relative;
 }
 
 #scene-1 {
-  grid-column: 4 / span 4;
-  grid-row: 3 / span 2;
+  grid-column: 5 / span 3;
+  grid-row: 5 / span 5;
 }
 
 #scene-2 {
-  grid-column: 4 / span 4;
-  grid-row: 5 / span 4;
+  grid-column: 15 / span 3;
+  grid-row: 8 / span 5;
   position: relative;
 }
 
 #graphic-bottom-right {
-  grid-column: 10 / span 3;
-  grid-row: 9 / span 1;
-  text-align: right;
+  grid-column: 15 / span 3;
+  grid-row: 7 / span 1;
+  color: var(--accent-color);
+}
+
+#graphic-bottom-right div {
+  width: 50%;
+  height: 100%;
+  float: left;
 }
 
 #graphic-bottom-right p {
   margin: 0;
 }
 
+#top-text, #bottom-text {
+  position: relative;
+}
+
 #top-text {
-  grid-column: 4 / span 9;
-  grid-row: 2 / span 1;
-  transform: translateY(35px);
+  grid-column: 1 / span 21;
+  grid-row: 3 / span 2;
+  /* transform: translateY(25px); */
   text-align: center;
 }
 
 #bottom-text {
-  grid-column: 4 / span 9;
-  grid-row: 9 / span 1;
-  transform: translateY(-50px);
+  grid-column: 1 / span 21;
+  grid-row: 13 / span 2;
+  /* transform: translateY(-50px); */
   text-align: center;
 }
 
 #bg-texture {
-  background: radial-gradient(farthest-corner circle at 70% 80%, #ff44ff 5%, transparent 50%, transparent),
-  radial-gradient(farthest-corner circle at 0px 0px, #00FFFF 10%, transparent 46%, transparent),
-  radial-gradient(farthest-corner circle at 30% 100%, #FFFF00 10%, transparent 80%, transparent),
-  radial-gradient(farthest-corner circle at 100% 0px, #28FFFF 10%, transparent 50%, transparent),
+  background: radial-gradient(farthest-corner circle at 70% 80%, #ff95ff 5%, transparent 50%, transparent),
+  radial-gradient(farthest-corner circle at 0px 0px, #55ffff 10%, transparent 46%, transparent),
+  radial-gradient(farthest-corner circle at 30% 100%, #ffff78 10%, transparent 80%, transparent),
+  radial-gradient(farthest-corner circle at 100% 0px, #54ffff 10%, transparent 50%, transparent),
   radial-gradient(farthest-corner circle at 100% 100%, #28ff7a 5%, transparent 70%, transparent);
-  background-size: 115% 115%;
+  background-size: 120% 120%;
+  /* filter: saturate(50%) brightness(90%); */
 }
