--- a/styles/index.css
+++ b/styles/index.css
@@ -279,14 +279,44 @@ nav .material-symbols-outlined {
   margin: 0;
 }
 
-#bg-texture {
+.bg-texture {
+  transition: 200ms;
+}
+
+.static {
   /* background: radial-gradient(farthest-corner circle at 70% 80%, #ff95ff 5%, transparent 50%, transparent),
   radial-gradient(farthest-corner circle at 0px 0px, #55ffff 10%, transparent 46%, transparent),
   radial-gradient(farthest-corner circle at 30% 100%, #ffff78 10%, transparent 80%, transparent),
   radial-gradient(farthest-corner circle at 100% 0px, #54ffff 10%, transparent 50%, transparent),
   radial-gradient(farthest-corner circle at 100% 100%, #28ff7a 5%, transparent 70%, transparent); */
-  background: radial-gradient(50% 123.47% at 50% 50%, #00FF94 0%, #FF00C7 100%), linear-gradient(121.28deg, #213100 0%, #FF0000 100%), linear-gradient(360deg, #0029FF 0%, #8FFF00 100%), linear-gradient(114.9deg, #00C6A2 0%, #6A45A8 100%), radial-gradient(100% 148.07% at 0% 0%, #FFFFFF 0%, #1DCD00 100%);
+
+  /* background: radial-gradient(50% 123.47% at 50% 50%, #00FF94 0%, #FF00C7 100%), 
+  linear-gradient(121.28deg, #213100 0%, #FF0000 100%), 
+  linear-gradient(360deg, #0029FF 0%, #8FFF00 100%), 
+  linear-gradient(114.9deg, #00C6A2 0%, #6A45A8 100%), 
+  radial-gradient(100% 148.07% at 0% 0%, #FFFFFF 0%, #1DCD00 100%);
+  background-blend-mode: screen, color-dodge, overlay, difference, normal;
+  background-size: 125% 125%;
+  filter: brightness(130%); */
+
+
+  background-size: 125% 125%;
+  filter: contrast(70%) brightness(300%);
+  background:
+  linear-gradient(0deg, rgba(0,0,255,1), rgba(0,0,0,0)),
+  url("data:image/svg+xml,%3Csvg viewBox='0 0 250 250' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='3.86' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
+}
+
+.rainbow {
+  mix-blend-mode: multiply;
+  opacity: 80%;
+  background: radial-gradient(50% 123.47% at 50% 50%, #00FF94 0%, #FF00C7 100%), 
+  linear-gradient(121.28deg, #213100 0%, #FF0000 100%), 
+  linear-gradient(360deg, #0029FF 0%, #8FFF00 100%), 
+  linear-gradient(114.9deg, #00C6A2 0%, #6A45A8 100%), 
+  radial-gradient(100% 148.07% at 0% 0%, #FFFFFF 0%, #1DCD00 100%);
   background-blend-mode: screen, color-dodge, overlay, difference, normal;
   background-size: 125% 125%;
   filter: brightness(130%);
+
 }
