--- a/styles/index.css
+++ b/styles/index.css
@@ -45,6 +45,17 @@ button:active {
   height: 100%;
   grid-row: 1 / span 16;
   background-color: var(--default-color);
+  transition: 300ms;
+}
+
+.double-col-left {
+  grid-column: 1 / span 2;
+  transition: 300ms;
+}
+
+.double-col-right {
+  grid-column: 20 / span 2;
+  transition: 300ms;
 }
 
 .top-level {
