--- a/styles/index.css
+++ b/styles/index.css
@@ -43,20 +43,20 @@ button:active {
 
 .vertical-bar {
   height: 100%;
-  grid-row: 1 / span 16;
+  width: 5%;
   background-color: var(--default-color);
-  transition: 300ms;
+  transition: 200ms;
+  position: absolute;
 }
 
-.double-col-left {
-  grid-column: 1 / span 2;
-  transition: 300ms;
+.chorus-vertical {
+  width: 8%;
 }
 
-.double-col-right {
-  grid-column: 20 / span 2;
-  transition: 300ms;
+#left-vertical {
+  right: 0;
 }
+
 
 .top-level {
   z-index: 1;
@@ -108,18 +108,21 @@ nav .material-symbols-outlined {
 }
 
 .window, .window button, .window-header {
-  background-color: var(--accent-color);
+  background-color: var(--light-accent);
+}
+
+.window, .window-body, .window button {
+  border: var(--accent-color) 2px solid;
 }
 
 .window {
-  border: var(--default-color) 3px solid;
+  border: var(--accent-color) 3px solid;
   position: absolute;
 }
 
 .window-body {
   background-color: var(--default-white);
   margin: 3px;
-  border: var(--default-color) 2px solid;
 }
 
 .window-body > p, #loading-overlay > .window button {
@@ -127,9 +130,7 @@ nav .material-symbols-outlined {
 }
 
 .window button {
-  border: var(--default-color) 2px solid;
   padding: 3px 20px;
-  color: var(--default-white);
 }
 
 .window button:disabled {
@@ -154,9 +155,12 @@ nav .material-symbols-outlined {
   border: none;
 }
 
+.window-header > p, .window-header button, .window button {
+  color: var(--default-color);
+}
+
 .window-header > p, .window-header button {
   margin: 5px 10px;
-  color: var(--default-white);
 }
 
 .grid {
@@ -167,10 +171,17 @@ nav .material-symbols-outlined {
   transition: 200ms;
 }
 
-#graphic-grid > nav {
+nav#left-nav {
   grid-column: 5 / span 3;
   grid-row: 10 / span 3;
+}
 
+nav#right-nav {
+  grid-column: 15 / span 3;
+  grid-row: 7 / span 1;
+  display: flex;
+  align-items: end;
+  justify-content: start;
 }
 
 #graphic-grid > nav > button {
@@ -228,6 +239,12 @@ nav .material-symbols-outlined {
   flex-direction: row;
 }
 
+#metadata-box img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
 #metadata-box div:first-child {
   border-right: var(--accent-color) 3px solid;  
   display: flex;
@@ -248,7 +265,7 @@ nav .material-symbols-outlined {
 }
 
 #metadata-box p {
-  font-size: 0.7em;
+  font-size: 8px;
   color: var(--accent-color);
   margin: 0;
 }
@@ -276,4 +293,29 @@ nav .material-symbols-outlined {
   background-blend-mode: screen, color-dodge, overlay, difference, normal;
   background-size: 125% 125%;
   filter: brightness(130%);
+}
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 900px) {
+  #graphic-grid > nav#left-nav {
+    grid-column: 4 / span 1;
+    grid-row: 5 / span 5;
+  }
+
+  #graphic-grid > nav#right-nav {
+    grid-column: 18 / span 1;
+    grid-row: 8 / span 5;
+    flex-direction: column;
+    align-items: center;
+    justify-content: end;
+  }
+
+  #metadata-box div:nth-child(2) {
+    display: none;
+  }
+
+  #metadata-box div:first-child {
+    border-right: none;
+  }
+  
 }
