--- a/styles/lyrics.css
+++ b/styles/lyrics.css
@@ -71,11 +71,6 @@ h1 {
   position: absolute;
 }
 
-#current-container {
-  /* animation-name: reveal-to-right;
-  animation-duration: 1000ms; */
-}
-
 #speech-bubble {
   background-color: var(--default-white);
   width: min-content;
@@ -84,14 +79,10 @@ h1 {
   white-space: nowrap;
   position: absolute;
   color: var(--accent-color);
-  /* top: 10vw; */
   font-size: max(1vw, 15px);
-  /* transform-origin: right;
-  transform: translateX(-18vw);
-  left: 35%; */
   top: 30%;
   left: -10%;
-  filter: 
+  /* filter: 
   drop-shadow(2px 0 var(--light-accent))
   drop-shadow(0 2px var(--light-accent))
   drop-shadow(-2px 0 var(--light-accent))
@@ -101,7 +92,13 @@ h1 {
   drop-shadow(0px 2px 2px rgba(225,0,0,.3))
   drop-shadow(-1px 5px 5px rgba(0,225,0,.1))
   drop-shadow(-2px 8px 8px rgba(0,225,225,.1))
-  drop-shadow(-2px 13px 13px rgba(0,225,225,.1));
+  drop-shadow(-2px 13px 13px rgba(0,225,225,.1)); */
+  filter:
+    drop-shadow(2px 0 var(--light-accent))
+    drop-shadow(0 2px var(--light-accent))
+    drop-shadow(-2px 0 var(--light-accent))
+    drop-shadow( 0 -2px var(--light-accent));
+
 }
 
 #speech-bubble:after {
@@ -123,13 +120,13 @@ h1 {
   margin: 0px;
   white-space: nowrap;
   text-overflow: clip;
-  filter:   
+  /* filter:   
   drop-shadow(0px 1px 1px rgba(225,0,0,.4))
   drop-shadow(0px 2px 2px rgba(225,0,0,.3))
   drop-shadow(-1px 3px 3px rgba(0,225,0,.2))
   drop-shadow(-1px 5px 5px rgba(0,225,0,.1))
   drop-shadow(-2px 8px 8px rgba(0,225,225,.1))
-  drop-shadow(-2px 13px 13px rgba(0,225,225,.1));
+  drop-shadow(-2px 13px 13px rgba(0,225,225,.1)); */
 }
 
 .y2k-text-style h1 {
@@ -148,7 +145,8 @@ h1 {
 }
 
 .lyric-intro-animation {
-  animation: rotate-text-intro 0.5s ease-in-out, text-shadow-intro 0.5s ease-in-out;
+  /* animation: rotate-text-intro 0.5s ease-in-out, text-shadow-intro 0.5s ease-in-out; */
+  animation: rotate-text-intro 0.5s ease-in-out;
 }
 
 .lyric-outro-animation {
@@ -172,7 +170,7 @@ h1 {
   drop-shadow(0px 1px 0 var(--light-accent))
   drop-shadow(0px 2px 0 var(--light-accent))
   drop-shadow(1px 0px 0 var(--light-accent))
-  drop-shadow(2px 0px 0 var(--light-accent))
+  /* drop-shadow(2px 0px 0 var(--light-accent))
   drop-shadow(-1px 0px 0 var(--light-accent))
   drop-shadow(-1px -1px 0 var(--light-accent))
   drop-shadow(-2px -2px 0 var(--light-accent))
@@ -183,7 +181,7 @@ h1 {
   drop-shadow(1px 1px 0 var(--light-accent))
   drop-shadow(2px 2px 0 var(--light-accent))
   drop-shadow(0 4px 0 var(--accent-color))
-  drop-shadow(0 5px 0 var(--accent-color));
+  drop-shadow(0 5px 0 var(--accent-color)); */
 }
 
 @keyframes text-shadow-intro {
